// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileComponent Rendering Should render 1`] = `
<yoo-tile
  class="hydrated"
  data-yoo-tile-host=""
>
  
  <div
    class="outer-container"
    data-yoo-tile=""
  >
    
    <div
      class="tile-value"
      data-yoo-tile=""
    >
      
    </div>
    <div
      class="tile-text undefined"
      data-yoo-tile=""
    >
      
    </div>
  </div>
</yoo-tile>
`;

exports[`TileComponent Rendering Should render with icon 1`] = `
<yoo-tile
  class="hydrated"
  data-yoo-tile-host=""
>
  
  <div
    class="outer-container"
    data-yoo-tile=""
  >
    <div
      class="tile-icon"
      data-yoo-tile=""
    >
      <i
        class="yo-activity"
        data-yoo-tile=""
      />
    </div>
    <div
      class="tile-value"
      data-yoo-tile=""
    >
      
    </div>
    <div
      class="tile-text undefined"
      data-yoo-tile=""
    >
      
    </div>
  </div>
</yoo-tile>
`;

exports[`TileComponent Rendering Should render with text 1`] = `
<yoo-tile
  class="hydrated"
  data-yoo-tile-host=""
>
  
  <div
    class="outer-container"
    data-yoo-tile=""
  >
    
    <div
      class="tile-value"
      data-yoo-tile=""
    >
      
    </div>
    <div
      class="tile-text undefined"
      data-yoo-tile=""
    >
      ONGOING MISSIONS
    </div>
  </div>
</yoo-tile>
`;

exports[`TileComponent Rendering Should render with textClass 1`] = `
<yoo-tile
  class="hydrated"
  data-yoo-tile-host=""
>
  
  <div
    class="outer-container"
    data-yoo-tile=""
  >
    
    <div
      class="tile-value"
      data-yoo-tile=""
    >
      
    </div>
    <div
      class="tile-text gradient-success"
      data-yoo-tile=""
    >
      
    </div>
  </div>
</yoo-tile>
`;

exports[`TileComponent Rendering Should render with value 1`] = `
<yoo-tile
  class="hydrated"
  data-yoo-tile-host=""
>
  
  <div
    class="outer-container"
    data-yoo-tile=""
  >
    
    <div
      class="tile-value"
      data-yoo-tile=""
    >
      5
    </div>
    <div
      class="tile-text undefined"
      data-yoo-tile=""
    >
      
    </div>
  </div>
</yoo-tile>
`;
